--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,28 +1,18 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #2f2f37;
-  max-width: 960px;
-  padding: 16px;
+.pag{
+  display: flex;
+  justify-content: center;
+}
+.pag__list{
+  display: flex;
+  list-style-type: none;
+}
+.pag__item {
+  padding: 8px;
+  margin: 8px;
+  cursor: pointer;
+  &--active{
+    font-weight: 800;
+    color:gold
+  }
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #ff6b0a;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
-}
-
-.example .background {
-  height: 240px;
-  // ❗️❗️❗️ The path to images from a SASS file
-  // is always the same as from the css folder.
-  background-image: url('../images/logo.png');
-  background-size: cover;
-  background-position: center;
-}
